# NetDebugClient

./: .gitignore  CMakeLists.txt  InputProcessor.hpp  README.md  TerminalBackend.cpp  TerminalBackend.h  TerminalBackend.hpp  main.cpp  pack_appimage.sh  pack_win_exe.cmd
.github/workflows/: build-appimage.yml  build-exe.yml  build.yml
User/: ClipboardBridge.hpp  DeviceManager.hpp  QTTimebase.hpp  TerminalBackend.cpp  TerminalBackend.hpp  app_main.hpp  qt_main.cpp
qml/: Main.qml  MainTerminalView.qml  SerialConfigPanel.qml  StatusIndicators.qml  TabButton.qml  TerminalBackendConnector.qml
web/: index.html
